clusters/my-cluster/argo-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-server
  namespace: argo
spec:
  type: LoadBalancer
  ports:
    - port: 2746
      targetPort: 2746
  selector:
    app: argo-server
